src/objects/Competitive_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>ASP_Range__c</fullName>
        <formula>Competitor_Product__r.ASP_Range__c</formula>
        <label>ASP($) Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matching GTM account found.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MD</value>
            </filterItems>
            <infoMessage>Search GTM account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Competitor_Brand__c</fullName>
        <description>Competitor product&apos;s vendor</description>
        <formula>TEXT(Competitor_Product__r.Brand__c)</formula>
        <label>Competitor Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Competitor&apos;s product</description>
        <label>Competitor Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matching competitor product found</errorMessage>
            <filterItems>
                <field>Competitive_Product__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor Product</value>
            </filterItems>
            <filterItems>
                <field>Competitive_Product__c.Entry_Period_Diff__c</field>
                <operation>lessOrEqual</operation>
                <value>365</value>
            </filterItems>
            <infoMessage>Search competitor product</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitive_Product__c</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Rank__c</fullName>
        <inlineHelpText>Market Share rank on the account in the price tier for latest period (Week / Month)</inlineHelpText>
        <label>Device Rank</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <inlineHelpText>History of Latest Updates</inlineHelpText>
        <label>History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Updates__c</fullName>
        <label>Latest Updates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motorola_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motorola Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Business_Unit__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitive Landscapes</relationshipLabel>
        <relationshipName>Competitive_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_Winning__c</fullName>
        <label>Why It Is Winning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Competitive Landscape</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Competitive Landscape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>